# min

./: .clang-format  .gitignore  CMakeLists.txt  README.md  canpcap.py  library.json  pyproject.toml
builder/: codegen.c  codegen.h  main.py  model.py  requirements.txt  sample.json  test.c
firmware/: fifo.c  fifo.h  firmware.cproj  layer2.c  layer2.h  main.c  main.h  messages.c  messages.h  serial.c  serial.h  usart.c  usart.h
firmware/min/: framerx.c  frametx.c  imin.h  layer1.c  min.h
host/: canmon.py  listen.py  min.py  minmon.py  requirements.txt  soak.py
