[project]
name = "min-proto"
version = "2.0.0"
description = "Microcontroller Interconnect Network protocol"
authors = [
    {name = "Ken Tindell"},
]
maintainers = [
    {name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com"},
]
dependencies = [
    "pyserial>=3.5"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["host/min.py", "py.typed"]

[tool.hatch.build.targets.wheel]
packages = ["host/min.py", "py.typed"]

[tool.pdm]
distribution = true
